--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+  Este archivo define la estructura base de la aplicación web "Aura Neuro".
+  Contiene la configuración inicial del documento HTML, la referencia al ícono del sitio,
+  el título de la página, y un contenedor principal donde se monta la aplicación Vue.
+-->
+
 <!doctype html>
 <html lang="en">
   <head>
